--- a/cart.html
+++ b/cart.html
@@ -40,6 +40,8 @@
           <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
+
+    <script src="var.js"></script>
 </head>
 
 <body>
@@ -306,14 +308,42 @@
                     <div class="single-sidebar">
                         <h2 class="sidebar-title">Các sản phẩm mới</h2>
                         <div id="SPNew">
-                          
+                            <script>
+                                // San pham moi 
+                                var n = data.length - 1;
+                                for (var i=n; i >= n-3 && i>=0; i--)
+                                    txt += '<div class="thubmnail-recent"><img src="'
+                                            +data[i].LinkImageSP+
+                                            '" class="recent-thumb" alt=""><h2><a href="">'
+                                            +data[i].NameSP+
+                                            '</a></h2><div class="product-sidebar-price"><ins>'
+                                            +data[i].SaleSP+
+                                            '</ins> <del>'
+                                            +data[i].money+
+                                            '</del></div></div>';
+
+                                document.getElementById("SPNew").innerHTML = txt;
+                            </script>
                         </div>
                     </div>
 
                     <div class="single-sidebar">
                         <h2 class="sidebar-title">Sản phẩm bán chạy</h2>
                         <ul id="SPBanChay">
-                            <!--<li><a href="">Sony Smart TV - 2015</a></li>-->
+                            <script>
+                                // San pham ban chay
+                                txt = "";
+                                n = data.length - 1;
+                                for (var i=n; i >= n-4 && i>=0; i--)
+
+                                    txt += '<li><a href="'
+                                            +''+
+                                            '">'
+                                            +data[i].NameSP+
+                                            '</a></li>';
+
+                                document.getElementById("SPBanChay").innerHTML = txt;
+                            </script>
                         </ul>
                     </div>
                 </div>
@@ -327,10 +357,10 @@
                                         <tr>
                                             <th class="product-remove">&nbsp;</th>
                                             <th class="product-thumbnail">&nbsp;</th>
-                                            <th class="product-name">Product</th>
-                                            <th class="product-price">Price</th>
-                                            <th class="product-quantity">Quantity</th>
-                                            <th class="product-subtotal">Total</th>
+                                            <th class="product-name">Tên sản phẩm</th>
+                                            <th class="product-price">Gía</th>
+                                            <th class="product-quantity">Số lượng</th>
+                                            <th class="product-subtotal">Tổng cộng</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -355,10 +385,13 @@
                                             <td class="product-quantity">
                                                 <div class="quantity buttons_added">
                                                     <input type="button" class="minus" value="-">
-                                                    <input type="number" size="4" class="input-text qty text" title="Qty"
-                                                        value="1" min="0" step="1">
+                                                    <input type="text" size="1" class="input-text qty text" title="Qty"
+                                                        value="1" id >
                                                     <input type="button" class="plus" value="+">
                                                 </div>
+                                                <script>
+                                                    
+                                                </script>
                                             </td>
 
                                             <td class="product-subtotal">
@@ -385,7 +418,7 @@
 
 
                                 <div class="cross-sells">
-                                    <h2>You may be interested in...</h2>
+                                    <h2>Có thể bạn quan tâm...</h2>
                                     <ul class="products">
                                         <li class="product">
                                             <a href="single-product.html">
@@ -724,7 +757,6 @@
 
 
     <div class="footer-top-area">
-      <div class="zigzag-bottom"></div>
       <div class="container">
         <div class="row">
           <div class="col-md-3 col-sm-6">
@@ -873,41 +905,6 @@
         </div>
       </div>
     </div>
-
-    <!--data-->
-    <script src="var.js"></script>
-    <script type="">
-        // San pham moi 
-        var txt = "";
-        var n = data.length - 1;
-        for (var i=n; i >= n-3 && i>=0; i--)
-
-            txt += '<div class="thubmnail-recent"><img src="'
-                    +data[i].LinkImageSP+
-                    '" class="recent-thumb" alt=""><h2><a href="">'
-                    +data[i].NameSP+
-                    '</a></h2><div class="product-sidebar-price"><ins>'
-                    +data[i].SaleSP+
-                    '</ins> <del>'
-                    +data[i].money+
-                    '</del></div></div>';
-
-        document.getElementById("SPNew").innerHTML = txt;
-
-        // San pham ban chay
-        txt = "";
-        var n = data.length - 1;
-        for (var i=n; i >= n-4 && i>=0; i--)
-
-            txt += '<li><a href="'
-                    +''+
-                    '">'
-                    +data[i].NameSP+
-                    '</a></li>';
-
-        document.getElementById("SPBanChay").innerHTML = txt;
-    </script>
-
 
     <!-- Latest jQuery form server -->
     <script src="js/jquery.min.js"></script>
