--- a/checkout.html
+++ b/checkout.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bông Xù Store</title>
+    <title>Bông Xù Store - Thanh toán</title>
 
     <!-- Google Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,200,300,700,600' rel='stylesheet' type='text/css'>
@@ -1094,7 +1094,7 @@
                                 <h3 id="order_review_heading">Đơn hàng của bạn</h3>
 
                                 <div id="order_review" style="position: relative;">
-                                    <table class="shop_table">
+                                    <table class="shop_table" id="checkout_items">
                                         <thead>
                                             <tr>
                                                 <th class="product-name">Sản phẩm</th>
@@ -1102,18 +1102,18 @@
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <tr class="cart_item">
+                                            <!-- <tr class="cart_item">
                                                 <td class="product-name">
                                                     Ship Your Idea <strong class="product-quantity">× 1</strong> </td>
                                                 <td class="product-total">
                                                     <span class="amount">£15.00</span> </td>
-                                            </tr>
+                                            </tr> -->
                                         </tbody>
                                         <tfoot>
 
                                             <tr class="cart-subtotal">
                                                 <th>Tổng cộng giỏ hàng</th>
-                                                <td><span class="amount">£15.00</span>
+                                                <td><span class="amount" id="cart_checkout_total"></span>
                                                 </td>
                                             </tr>
 
@@ -1130,7 +1130,7 @@
 
                                             <tr class="order-total">
                                                 <th>Tổng cộng đơn hàng</th>
-                                                <td><strong><span class="amount">£15.00</span></strong> </td>
+                                                <td><strong><span class="amount" id="order_checkout_total"></span></strong> </td>
                                             </tr>
 
                                         </tfoot>
@@ -1366,6 +1366,7 @@
 
     <!-- Main Script -->
     <script src="js/main.js"></script>
+    <script src="js/shoppingcart.js"></script>
 
     <!-- Slider -->
     <script type="text/javascript" src="js/bxslider.min.js"></script>
