--- a/single-product.html
+++ b/single-product.html
@@ -405,64 +405,78 @@
 
                                     <div class="product-inner-category">
                                         <p>Category: 
-                                          <a href=""><script>document.write(data[LoadSP].Category);</script></a> 
+                                            <a href=""><script>document.write(data[LoadSP].Category);</script></a> 
                                           <!-- Tags: <a href=""></a>. -->
                                         </p>
                                     </div>
 
-                                    <div role="tabpanel">
-                                        <ul class="product-tab" role="tablist">
-                                            <li role="presentation" class="active"><a href="#home" aria-controls="home"
-                                                    role="tab" data-toggle="tab">Mô tả</a></li>
-                                            <li role="presentation"><a href="#profile" aria-controls="profile" role="tab"
-                                                    data-toggle="tab">Nhận xét</a></li>
-                                        </ul>
-                                        <div class="tab-content">
-                                            <div role="tabpanel" class="tab-pane fade in active" id="home">
-                                                <h2>Product Description</h2>
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-                                                    tristique, diam in consequat iaculis, est purus iaculis mauris,
-                                                    imperdiet facilisis ante ligula at nulla. Quisque volutpat nulla
-                                                    risus, id maximus ex aliquet ut. Suspendisse potenti. Nulla varius
-                                                    lectus id turpis dignissim porta. Quisque magna arcu, blandit quis
-                                                    felis vehicula, feugiat gravida diam. Nullam nec turpis ligula.
-                                                    Aliquam quis blandit elit, ac sodales nisl. Aliquam eget dolor eget
-                                                    elit malesuada aliquet. In varius lorem lorem, semper bibendum
-                                                    lectus lobortis ac.</p>
 
-                                                <p>Mauris placerat vitae lorem gravida viverra. Mauris in fringilla ex.
-                                                    Nulla facilisi. Etiam scelerisque tincidunt quam facilisis
-                                                    lobortis. In malesuada pulvinar neque a consectetur. Nunc aliquam
-                                                    gravida purus, non malesuada sem accumsan in. Morbi vel sodales
-                                                    libero.</p>
-                                            </div>
-                                            <div role="tabpanel" class="tab-pane fade" id="profile">
-                                                <h2>Reviews</h2>
-                                                <div class="submit-review">
-                                                    <p><label for="name">Name</label> <input name="name" type="text"></p>
-                                                    <p><label for="email">Email</label> <input name="email" type="email"></p>
-                                                    <div class="rating-chooser">
-                                                        <p>Your rating</p>
-
-                                                        <div class="rating-wrap-post">
-                                                            <i class="fa fa-star"></i>
-                                                            <i class="fa fa-star"></i>
-                                                            <i class="fa fa-star"></i>
-                                                            <i class="fa fa-star"></i>
-                                                            <i class="fa fa-star"></i>
-                                                        </div>
-                                                    </div>
-                                                    <p><label for="review">Your review</label> <textarea name="review"
-                                                            id="" cols="30" rows="10"></textarea></p>
-                                                    <p><input type="submit" value="Submit"></p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
 
                                 </div>
                             </div>
-                        </div>    
+                        </div>  
+
+
+                        <div class="row">
+                            <div role="tabpanel">
+                                <ul class="product-tab" role="tablist">
+                                    <li role="presentation" class="active">
+                                        <a href="#home" aria-controls="home" role="tab" data-toggle="tab">
+                                            Mô tả
+                                        </a>
+                                    </li>
+
+                                    <li role="presentation">
+                                        <a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">
+                                            Nhận xét
+                                        </a>
+                                    </li>
+                                </ul>
+                                <div class="tab-content">
+                                    <div role="tabpanel" class="tab-pane active" id="home">
+                                        <h2>Product Description</h2>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+                                            tristique, diam in consequat iaculis, est purus iaculis mauris,
+                                            imperdiet facilisis ante ligula at nulla. Quisque volutpat nulla
+                                            risus, id maximus ex aliquet ut. Suspendisse potenti. Nulla varius
+                                            lectus id turpis dignissim porta. Quisque magna arcu, blandit quis
+                                            felis vehicula, feugiat gravida diam. Nullam nec turpis ligula.
+                                            Aliquam quis blandit elit, ac sodales nisl. Aliquam eget dolor eget
+                                            elit malesuada aliquet. In varius lorem lorem, semper bibendum
+                                            lectus lobortis ac.</p>
+
+                                        <p>Mauris placerat vitae lorem gravida viverra. Mauris in fringilla ex.
+                                            Nulla facilisi. Etiam scelerisque tincidunt quam facilisis
+                                            lobortis. In malesuada pulvinar neque a consectetur. Nunc aliquam
+                                            gravida purus, non malesuada sem accumsan in. Morbi vel sodales
+                                            libero.</p>
+                                    </div>
+                                    <div role="tabpanel" class="tab-pane" id="profile">
+                                        <h2>Reviews</h2>
+                                        <div class="submit-review">
+                                            <p><label for="name">Name</label> <input name="name" type="text"></p>
+                                            <p><label for="email">Email</label> <input name="email" type="email"></p>
+                                            <div class="rating-chooser">
+                                                <p>Your rating</p>
+
+                                                <div class="rating-wrap-post">
+                                                    <i class="fa fa-star"></i>
+                                                    <i class="fa fa-star"></i>
+                                                    <i class="fa fa-star"></i>
+                                                    <i class="fa fa-star"></i>
+                                                    <i class="fa fa-star"></i>
+                                                </div>
+                                            </div>
+                                            <p><label for="review">Your review</label> <textarea name="review"
+                                                    id="" cols="30" rows="10"></textarea></p>
+                                            <p><input type="submit" value="Submit"></p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
                     </div>
                 </div>
             </div>
