--- a/checkout.html
+++ b/checkout.html
@@ -290,53 +290,7 @@
         <div class="zigzag-bottom"></div>
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
-                    <div class="single-sidebar">
-                        <h2 class="sidebar-title">Tìm kiếm sản phẩm</h2>
-                        <form action="">
-                            <input type="text" placeholder="Tìm kiếm...">
-                            <input type="submit" value="Tìm">
-                        </form>
-                    </div>
-
-                    <div class="single-sidebar">
-                        <h2 class="sidebar-title">Các sản phẩm mới</h2>
-                        <div id="SPNew">
-                            <script>
-                                // San pham moi 
-                                var txt = "";
-                                var n = data.length - 1;
-                                for (var i=n; i >= n-3 && i>=0; i--)
-                                    txt += `<div class="thubmnail-recent">
-                                                <img src="${data[i].LinkImageSP}" class="recent-thumb" alt="">
-                                                <h2><a href="single-product.html?id=${data[i].Id}">${data[i].NameSP}</a></h2>
-                                                <div class="product-sidebar-price">
-                                                    <ins>${data[i].SaleSP}<sup>đ</sup></ins>
-                                                    <del>${data[i].money}<sup>đ</sup></del>
-                                                </div>
-                                            </div>`;                                            
-                                document.getElementById("SPNew").innerHTML = txt;
-                            </script>
-                        </div>
-                    </div>
-
-                    <div class="single-sidebar">
-                        <h2 class="sidebar-title">Sản phẩm bán chạy</h2>
-                        <ul id="SPBanChay">
-                            <script>
-                                // San pham ban chay
-                                txt = "";
-                                var n = data.length - 1;
-                                for (var i=n; i >= n-4 && i>=0; i--)
-                                    txt += `<li><a href="single-product.html?id=${data[i].Id}">${data[i].NameSP}</a></li>`;
-
-                                document.getElementById("SPBanChay").innerHTML = txt;
-                            </script>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="col-md-8">
+                <div class="col-md-7">
                     <div class="product-content-right">
                         <div class="woocommerce">
                             <div class="woocommerce-info">Đã từng mua hàng? <a class="showlogin" data-toggle="collapse"
@@ -1085,50 +1039,7 @@
                                   <div class="clear"></div>
                                 </div>
 
-                                <h3 id="order_review_heading">Đơn hàng của bạn</h3>
-
-                                <div id="order_review" style="position: relative;">
-                                    <table class="shop_table" id="checkout_items">
-                                        <thead>
-                                            <tr>
-                                                <th class="product-name">Sản phẩm</th>
-                                                <th class="product-total">Chi phí</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <!-- <tr class="cart_item">
-                                                <td class="product-name">
-                                                    Ship Your Idea <strong class="product-quantity">× 1</strong> </td>
-                                                <td class="product-total">
-                                                    <span class="amount">£15.00</span> </td>
-                                            </tr> -->
-                                        </tbody>
-                                        <tfoot>
-
-                                            <tr class="cart-subtotal">
-                                                <th>Tổng cộng giỏ hàng</th>
-                                                <td><span class="amount" id="cart_checkout_total"></span>
-                                                </td>
-                                            </tr>
-
-                                            <tr class="shipping">
-                                                <th>Giao hàng</th>
-                                                <td>
-
-                                                    Miễn phí
-                                                    <input type="hidden" class="shipping_method" value="free_shipping"
-                                                        id="shipping_method_0" data-index="0" name="shipping_method[0]">
-                                                </td>
-                                            </tr>
-
-
-                                            <tr class="order-total">
-                                                <th>Tổng cộng đơn hàng</th>
-                                                <td><strong><span class="amount" id="order_checkout_total"></span></strong> </td>
-                                            </tr>
-
-                                        </tfoot>
-                                    </table>
+                                
 
 
                                     <div id="payment">
@@ -1184,9 +1095,57 @@
                             </form>
 
                         </div>
+                </div>
+                <div class="col-md-5">
+                  <div class="single-sidebar">
+                    <h2 id="order_review_heading" class="text-center d-block">Đơn hàng của bạn</h2>
+
+                    <div id="order_review" style="position: relative;">
+                      <table class="shop_table" id="checkout_items">
+                        <thead>
+                          <tr>
+                            <th class="product-name">Sản phẩm</th>
+                            <th class="product-total">Chi phí</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                            <!-- <tr class="cart_item">
+                                <td class="product-name">
+                                    Ship Your Idea <strong class="product-quantity">× 1</strong> </td>
+                                <td class="product-total">
+                                    <span class="amount">£15.00</span> </td>
+                            </tr> -->
+                        </tbody>
+                        <tfoot>
+
+                          <tr class="cart-subtotal">
+                              <th>Tổng cộng giỏ hàng</th>
+                              <td><span class="amount" id="cart_checkout_total"></span>
+                              </td>
+                          </tr>
+
+                          <tr class="shipping">
+                              <th>Giao hàng</th>
+                              <td>
+                                  Miễn phí
+                                  <input type="hidden" class="shipping_method" value="free_shipping"
+                                      id="shipping_method_0" data-index="0" name="shipping_method[0]">
+                              </td>
+                          </tr>
+
+
+                          <tr class="order-total">
+                              <th>Tổng cộng đơn hàng</th>
+                              <td><strong><span class="amount" id="order_checkout_total"></span></strong> </td>
+                          </tr>
+
+                        </tfoot>
+                      </table>
                     </div>
                 </div>
+              </div>
             </div>
+        </div>
         </div>
     </div>
 
